@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.vgtv" name="VGTV" version="1.0.2" provider-name="Espen Hovlandsdal">
+<addon id="plugin.video.vgtv" name="VGTV" version="1.0.3" provider-name="Espen Hovlandsdal">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
     <import addon="script.module.xbmcswift2" version="1.1.1"/>
