@@ -150,6 +150,9 @@ class VgtvApi():
             if ('mp4' not in video['formats']['http'] and
                 'm3u8' in video['formats']['http']):
                 format = 'm3u8'
+            elif ('mp4' not in video['formats']['http'] and
+                'flv' in video['formats']['http']):
+                format = 'flv'
         else:
             # Reverse order for stuff we have to resolve
             # Had some trouble getting mp4 stream to work
